Fix pom file for packaging